Fixes. Dependencies.